--- a/lecturebus/src/components/PlayerCharacter.css
+++ b/lecturebus/src/components/PlayerCharacter.css
@@ -10,7 +10,7 @@
 .character-sprite {
   width: 100%;
   height: 100%;
-  background-image: url('C:\Users\USER\Desktop\myfile\developerStudy\My work\streaming\lecturebus\public\images\character_sprite.png'); 
+  background-image: url('../../public/images/character_sprite.png'); 
   background-size: cover; /* 스프라이트 시트 애니메이션 구현 시 변경 */
 }
 
